# ChangeLog for dev-libs/glib
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.597 2014/03/15 11:25:49 pacho Exp $

  15 Mar 2014; Pacho Ramos <pacho@gentoo.org> glib-2.38.2-r1.ebuild:
  x86 stable, bug #501330

  15 Mar 2014; Pacho Ramos <pacho@gentoo.org> glib-2.38.2-r1.ebuild:
  amd64 stable, bug #501330

*glib-2.38.2-r1 (14 Mar 2014)

  14 Mar 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
  +glib-2.38.2-r1.ebuild, +files/glib-2.38.2-sigaction.patch:
  Fix uninitialized memory access in signal handler code that caused consolekit
  to fail (thanks to everybody from bug #501330 for diagnosing the issue, and
  to George L. Emigh for finding the patch).

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> glib-2.38.2.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> glib-2.38.2.ebuild:
  amd64 stable, bug 499954

  04 Mar 2014; Naohiro Aota <naota@gentoo.org>
  +files/glib-2.38.2-configure.patch, glib-2.38.2.ebuild:
  Apply a upstream patch to fix non POSIX test construction. #500996

  22 Feb 2014; Akinori Hattori <hattya@gentoo.org> glib-2.36.4-r1.ebuild:
  ia64 stable wrt bug #494132

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> glib-2.36.4-r1.ebuild,
  glib-2.38.2.ebuild:
  Add arm64 love.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> glib-2.34.3-r1.ebuild,
  glib-2.36.4-r1.ebuild:
  Mark m68k/s390/sh stable.

  23 Dec 2013; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml:
  Restore metadata.xml upstream tag.

*glib-2.38.2 (23 Dec 2013)

  23 Dec 2013; Gilles Dartiguelongue <eva@gentoo.org> +glib-2.38.2.ebuild,
  files/glib-2.12.12-fbsd.patch,
  files/glib-2.34.0-testsuite-skip-thread4.patch,
  files/glib-2.36.4-znodelete.patch,
  +files/glib-2.37.x-external-gdbus-codegen.patch, metadata.xml:
  Version bump for Gnome 3.10. Refresh patches with git headers.

  22 Dec 2013; Jeroen Roovers <jer@gentoo.org> glib-2.36.4-r1.ebuild: