@@ -33,13 +33,12 @@ EBUILD glib-2.32.4-r1.ebuild 8355 SHA256 2c7bed6e3df8f29a6fc03d3c627ac6ddedb62d5
 EBUILD glib-2.34.3-r1.ebuild 8398 SHA256 17c312a7ec9a61ed1720ae5bfc5bbd77e285a3f35c4555ec30780b95390a66ed SHA512 43fe5cf6a579939be32d31fecb3389813bdd3cf2773e414c1d8f368c130ede4da9558cec40051fafb31eea514359267f0182db0211ca91fa55db4c1aa9905162 WHIRLPOOL 68f54986ce2328c599ad298364c0af710cab188854ffce68b3a01f9a0087049e208437a33c2f254488df0f7a3b03f4e5266f45af970ee5aab2783617549cf000
 EBUILD glib-2.36.4-r1.ebuild 9867 SHA256 4127b4d88348932a795d17429db6f9de0d361a9ab19cf1bc54f67162b79bd379 SHA512 63f46a199e0c394729027ffd2fa00e0febd22ad69471a36a4fe4eae9e2457b3da13827e73a315ff406e59ad6051e1d48becd94b66c3d291fc11196feb678fe7c WHIRLPOOL 04d8112891f9f5836b606f32ece3c9b3e799a1a87b770e821527d957efe031c9b55c16b41f48a8ad3f939693a188ceedc3323292d7bcf0b6e22a151820d7d4a4
 EBUILD glib-2.38.2-r1.ebuild 9873 SHA256 1aca70d0b2a37e611bebf013f7aa2b869cccac55af194b9baf8de59efc2a7089 SHA512 fd2d2e8ef8d5b4ac93facbc4100f416e2dbdd4498a61ba76d268500d0804ba6eaaf9238ec0b412ac734047f308587b1ad01510eb307addfa2cc2674eb1907b70 WHIRLPOOL 273668ff595266f34e4c0cb1f9c2d188e8ed1d668b6b8318eb7a0742c2a8dc859980a8b0b810b0019619b23be5a5846ed22765033cd60d840c54ce6c1f4e5f2f
-EBUILD glib-2.38.2.ebuild 9778 SHA256 6077f876c063a0a2621ca4cea0467b73fdf5928c3da562d893f0e8ec784a9004 SHA512 e02b2f98b3f9e44143f31593f4c2317e00bd6d5e3a5d92932a07981183852540ef351b668d76a297430d0e2bb30156072f75928ec6441dc8526a2dd38da8831f WHIRLPOOL 4f5bb5f9bae3b09570ecd44a92598af33d388339dfd09bfadd2245376b4f01fcbe6724f27c8724f8184d826aa082f8eeb8b30d1d2cf4ffa60784dda7a3f19457
-MISC ChangeLog 84016 SHA256 76bbfa11da0c575dbf0e88584f61aea545697faadabc05b454029b20ba369106 SHA512 c19040cd730bbfea3936329e46f95fe1523fc09f8e2b8504752b9618aa2f0bdf16af84e0c718939cb52ec28921277458f33ede72d275e4c010ad07b0710799c3 WHIRLPOOL 0a9e61c2b0853855f164a9ceac9667308fb03d949d8094d219f973db77741fa0fb1b913ecdd6fe5934741c874f4636bef098d2f88c20110491988cd2e50008d6
+MISC ChangeLog 84106 SHA256 f9c45c6e206310324e560e8f4d0bf505731ead959324b08f155b1eddb14bafd9 SHA512 e3b073c3f44736c6e4fec4c9e24a30452b55622fb64aa4a0c822e6785347ad44ba6e3a1bc663aeb37d81fa43bce18af7488c69a95162f39a7de760fe4b0adf66 WHIRLPOOL 4ab1f6a9a8a29a53f80b21696ca35f1f00974b29e0393c47da49376af5c96b0222194743de1c91004e4ff3da8696d3892e96fa9a682185388c6a032d0135ac68
 MISC metadata.xml 479 SHA256 1a41cb4f56511674a423efd444f7c6999b5d316f9058d2eb67a032a522738ffb SHA512 f30f9e937d43dd4fb148dc7ab1554b5c58ddf4211bc06cfc65e92ff9843a84f0b05fa130fcd130744ad6e3579fb5b82a7f31950dd8ccc317f58388023cb6fe50 WHIRLPOOL 92888cd8e3a839860cb20c60ad1ee2871ea9efdf54d5751d6b5f677faf10e721333c3d68b1b5c4af212854f9ecd9e31970832eaa05f30276987bcadacaf5f637
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMkOL4ACgkQCaWpQKGI+9TSUACfXO4IPtDSwIkxF8HJUyENQKom
-zWsAnR4676o4L8KJ9gQynxeojP2/sTyl
-=SPXL
+iEYEAREIAAYFAlMlsQ8ACgkQCaWpQKGI+9Q7wQCdHHaOBww4HSQFgFEKAyx1NPRj
+18oAn3/Jn6rHFDVDZ3P+My/14Bs3+fFR
+=soqM
 -----END PGP SIGNATURE-----
