@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.597 2014/03/15 11:25:49 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.598 2014/03/16 14:11:26 pacho Exp $
+
+  16 Mar 2014; Pacho Ramos <pacho@gentoo.org> -glib-2.38.2.ebuild:
+  Drop broken version
 
   15 Mar 2014; Pacho Ramos <pacho@gentoo.org> glib-2.38.2-r1.ebuild:
   x86 stable, bug #501330
